Bug 64062 - crash when loading odp
Summary: crash when loading odp
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0 target:4.0.4
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-29 21:41 UTC by Jos van den Oever
Modified: 2013-04-30 21:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
file that crashes simpress (3.94 KB, application/vnd.oasis.opendocument.presentation)
2013-04-29 21:41 UTC, Jos van den Oever
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jos van den Oever 2013-04-29 21:41:05 UTC
Created attachment 78618 [details]
file that crashes simpress

When loading the attached odp file, simpress crashes every time.
Comment 1 Joel Madero 2013-04-30 03:14:03 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version 4.0.2.2 
Platform: Ubuntu 13.04 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 

Marking as:

New (confirmed)
Major - Crash
High - only one file so far affected

Keywords - 

Whiteboard Status - bibisectrequest

@Jos van den Oever - how did you create this file? If with LibreOffice, what version?

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Thorsten Behrens (allotropia) 2013-04-30 07:31:46 UTC
Comment on attachment 78618 [details]
file that crashes simpress

tweak mime type
Comment 3 Thorsten Behrens (allotropia) 2013-04-30 09:26:17 UTC
Fixed in master, -4-0 backport review pending.
Comment 4 Commit Notification 2013-04-30 09:26:45 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd09b5379e9370c66fe9d819dc3cd01dd30e3a91

Fix fdo#64062 - can't assume para styles to be there.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-04-30 09:35:05 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0252a22c43ec6d676c7d9a7ded0ec7064dede7c1&h=libreoffice-4-0

Fix fdo#64062 - can't assume para styles to be there.


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jos van den Oever 2013-04-30 21:45:19 UTC
This is resolved (thanks!) but i'll answer the question anyway:

"@Jos van den Oever - how did you create this file? If with LibreOffice, what version?"

I handcrafted the file when I was seeing if 
  https://bugs.freedesktop.org/show_bug.cgi?id=64038
also affects presentations.