Fix fdo#64062 - can't assume para styles to be there.

Change-Id: I5da53ff44fdf00ec6c0fdf1a722f806971b6683a